--- a/app/globals.css
+++ b/app/globals.css
@@ -26,6 +26,12 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+.header{
+  background-color: red;
+  height: 20vh;
+  widht: 100%;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
