--- a/app/globals.css
+++ b/app/globals.css
@@ -18,12 +18,11 @@
 
 body {
 	background: white;
+	font-size: clamp(1vh, 12px, 1vw);
 }
 
 .header {
-	background-color: red;
-	height: 20vh;
-	widht: 100%;
+
 }
 
 .module {
@@ -78,17 +77,17 @@ border: 1px solid rgba(56, 56, 56, 0.3);
 	color: white;	
 	border-width: 2px;
 	padding: .5em;
-	margin-top: 1.25em;
 	font-weight: light;
 	background-color: rgba(202, 0, 0, .75);
 }
 
 input, select{
-	height: 3em;
+	height: 3rem;
 	background-color: white;
 	border-radius: 1em;
 	border-color: #888899;
 	box-shadow: inset 1px 1px 16px 1px #ddddee;
+	margin-bottom: 1.25em;
 }
 
 input{
@@ -98,6 +97,10 @@ input{
 label{
 	font-weight: lighter;
 	font-size: 1.25em;
+}
+
+label::after{
+	content: ':';
 }
 
 @layer utilities {
