--- a/app/globals.css
+++ b/app/globals.css
@@ -126,3 +126,15 @@ label::after{
 		text-wrap: balance;
 	}
 }
+
+#loading{
+	animation: 2s ease 0.2s infinite normal loading;
+}
+
+@keyframes loading{
+	from {
+		transform: rotate(0deg);
+	}to{
+		transform: rotate(360deg);
+	}
+}
