--- a/app/globals.css
+++ b/app/globals.css
@@ -52,22 +52,13 @@ body {
 	background-repeat: no-repeat;
 }
 
-.regCard {
+.regCard, .loginCard {
 	/* From https://css.glass */
 /* From https://css.glass */
-background: rgba(32, 32, 32, 0.75);
-border-radius: 8px;
+background: rgba(32, 32, 32, 0.85);
+border-radius: 4px;
 box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-border: 2px solid rgba(64, 64, 64, 0.9);
-}
-
-.loginCard {
-	/* From https://css.glass */
-/* From https://css.glass */
-background: rgba(32, 32, 32, .75);
-border-radius: 8px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-border: 2px solid rgba(64, 64, 64, 0.9);
+border: 2px solid rgba(64, 64, 64, 0.5);
 }
 
 
@@ -75,10 +66,10 @@ border: 2px solid rgba(64, 64, 64, 0.9);
 	font-size: 1.35em;
 	border-radius: 1em;
 	color: white;	
-	border-width: 2px;
 	padding: .5em;
+	margin-top: 1em;
 	font-weight: light;
-	background-color: rgba(202, 0, 0, .75);
+	background-color: rgba(242, 25, 25, .95);
 }
 
 .dashboard{
@@ -100,11 +91,13 @@ border: 2px solid rgba(64, 64, 64, 0.9);
 	height: 2.75em;
 	text-size: 1.25em;
 	background-color: white;
-	border-radius: 8px;
-	border-color: #888899;
+	border-radius: 4px;
+	border-width: 1px;
+	border-color: #aaaafa;
 	padding-left: 8px;
 	padding-right: 8px;
-	box-shadow: inset 1px 1px 16px 1px #ddddee;
+	color: black !important;
+	box-shadow: inset 1px 1px 16px 2px #ddddee;
 	margin-bottom: 1.25em;
 }
 
