--- a/app/globals.css
+++ b/app/globals.css
@@ -19,6 +19,12 @@
 body {
 	background: white;
 	font-size: 12px;
+	overflow: scroll;
+}
+
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
 }
 
 .header {
